fix left margin error (it spilled off the page when resizing window). Fix top margin between content sections.

--- a/css/__brandingVariables.scss
+++ b/css/__brandingVariables.scss
@@ -57,7 +57,7 @@ $brand-danger:          $dark-red;
 ================================*/
 
 //** Background color for `<body>`.
-$body-bg:               #ccc;
+$body-bg:               #edeff0;
 //** Global text color on `<body>`.
 $text-color:            $charcoal;
 
