--- a/css/app.scss
+++ b/css/app.scss
@@ -14,6 +14,14 @@ p {
 	margin-left: 15px;
 }
 
+h1 {
+	font-size: 25px
+}
+
+h2 {
+	font-size: 19px;
+}
+
 h2 + code {
 	margin-top: 28px;
 	margin-left: 15px;
@@ -21,10 +29,8 @@ h2 + code {
 
 section.content {
 	background: #fff;
-	margin-top: 60px;
+	margin-top: 20px;
 	padding: 0 30px 30px 30px;
-	margin-left: -30px;
-	margin-right: -30px;
 }
 
 .hidden-hr {
@@ -135,11 +141,6 @@ tbody {
 
 .alert-padding {
 	padding: 0 15px;
-}
-
-.alert-dismissable .close, 
-.alert-dismissible .close {
-	right: 0;
 }
 
 .input-group-addon {
